--- a/_view/template.html
+++ b/_view/template.html
@@ -9,8 +9,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">
-                    <img src="/assets/images/logo.png" alt="logo" />
+                <a class="navbar-brand" href="{{ vars.path.top }}">
+                    <img src="{{ vars.path.top }}assets/images/logo.png" alt="logo" />
                     {{ camp.name }}
                 </a>
             </div>
@@ -18,8 +18,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/#{{ links.scouts }}">{{ nav_buttons.scouts }} <span class="sr-only">(current)</span></a></li>
-                    <li><a href="/#{{ links.badges }}">{{ nav_buttons.badges }}</a></li>
+                    <li class="active"><a href="{{ vars.path.top }}#{{ links.scouts }}">{{ nav_buttons.scouts }} <span class="sr-only">(current)</span></a></li>
+                    <li><a href="{{ vars.path.top }}#{{ links.badges }}">{{ nav_buttons.badges }}</a></li>
                     <li class="dropdown">
 
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -61,7 +61,7 @@
                         <ul class="dropdown-menu drop-overflow">
                             <!-- MythAPI - Use method Hash -->
                             {{ #members }}
-                                <li><a member="{{ id }}" class="select-member" href="/#{{ links.scouts }}/{{ id }}">{{ nome }}</a></li>
+                                <li><a member="{{ id }}" class="select-member" href="{{ vars.path.top }}#{{ links.scouts }}/{{ id }}">{{ nome }}</a></li>
                             {{ /members }}
                         </ul>
                     </li>
