--- a/_view/template.html
+++ b/_view/template.html
@@ -18,8 +18,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="{{ vars.path.top }}#{{ links.scouts }}">{{ nav_buttons.scouts }} <span class="sr-only">(current)</span></a></li>
-                    <li><a href="{{ vars.path.top }}#{{ links.badges }}">{{ nav_buttons.badges }}</a></li>
+                    <li data-rel="scout" class="active nav-bar show-scouts"><a href="{{ vars.path.top }}#/{{ links.scouts }}">{{ nav_buttons.scouts }} <span class="sr-only">(current)</span></a></li>
+                    <li data-rel="badge" class="nav-bar show-badges"><a href="{{ vars.path.top }}#/{{ links.badges }}">{{ nav_buttons.badges }}</a></li>
                     <li class="dropdown">
 
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -61,7 +61,7 @@
                         <ul class="dropdown-menu drop-overflow">
                             <!-- MythAPI - Use method Hash -->
                             {{ #members }}
-                                <li><a member="{{ id }}" class="select-member" href="{{ vars.path.top }}#{{ links.scouts }}/{{ id }}">{{ nome }}</a></li>
+                                <li><a member="{{ id }}" class="select-member" href="{{ vars.path.top }}#/{{ links.scouts }}/{{ id }}">{{ nome }}</a></li>
                             {{ /members }}
                         </ul>
                     </li>
@@ -79,6 +79,26 @@
         <div class="panel-body" id="scout-board">
 
             {{ table }}
+
+        </div>
+
+        <div id="badge-board" class="panel panel-default hide-board">
+
+            {{ #badges }}
+            <p>
+                <b>Nome:</b> {{ nome }} <img src="{{ vars.path.top }}{{ vars.assets.badges }}/{{ id }}.png" alt="{{ id}}" />
+            </p>
+            <p>
+                <b>Título:</b> {{ titulo }}
+            </p>
+            <p>
+                <b>Tipo:</b> {{ tipo }}
+            </p>
+            <p>
+                <b>Descrição:</b> {{ descricao }}
+            </p>
+            <br>
+            {{ /badges }}
 
         </div>
     </div>
