--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">
-                    <img src="/assets/images/logo.png" alt="logo" />
+                <a class="navbar-brand" href="/and-knuckles/">
+                    <img src="/and-knuckles/assets/images/logo.png" alt="logo" />
                     Projeto Teste
                 </a>
             </div>
@@ -31,8 +31,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li data-rel="scout" class="active nav-bar show-scouts"><a href="/#/membros">Membros <span class="sr-only">(current)</span></a></li>
-                    <li data-rel="badge" class="nav-bar show-badges"><a href="/#/medalhas">Medalhas</a></li>
+                    <li data-rel="scout" class="active nav-bar show-scouts"><a href="/and-knuckles/#/membros">Membros <span class="sr-only">(current)</span></a></li>
+                    <li data-rel="badge" class="nav-bar show-badges"><a href="/and-knuckles/#/medalhas">Medalhas</a></li>
                     <li class="dropdown">
 
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -73,9 +73,9 @@
                         </a>
                         <ul class="dropdown-menu drop-overflow">
                             <!-- MythAPI - Use method Hash -->
-                                <li><a member="williamd1k0" class="select-member" href="/#/membros/williamd1k0">William Tuméo</a></li>
-                                <li><a member="lucasflicky" class="select-member" href="/#/membros/lucasflicky">Lucas Flicky</a></li>
-                                <li><a member="vinicius" class="select-member" href="/#/membros/vinicius">Vinicius Kleinsorgen</a></li>
+                                <li><a member="williamd1k0" class="select-member" href="/and-knuckles/#/membros/williamd1k0">William Tuméo</a></li>
+                                <li><a member="lucasflicky" class="select-member" href="/and-knuckles/#/membros/lucasflicky">Lucas Flicky</a></li>
+                                <li><a member="vinicius" class="select-member" href="/and-knuckles/#/membros/vinicius">Vinicius Kleinsorgen</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -101,7 +101,7 @@
         <tr>
             <!-- CREST ICON -->
             <th class="crest">
-                <img alt="crest" class="crestpic" title="" src="/assets/images/crests/roxo.png">
+                <img alt="crest" class="crestpic" title="" src="/and-knuckles/assets/images/crests/roxo.png">
             </th>
             <!-- NAME -->
             <th align="left" class="name" colspan="3"> William Tuméo </th>
@@ -111,7 +111,7 @@
                 <b>Nível</b>: Diamond
             </th>
             <th align="right" class="tiericon">
-                    <img alt="tier" class="tier" title="Diamond" src="/assets/images/tiers/Diamond.png">
+                    <img alt="tier" class="tier" title="Diamond" src="/and-knuckles/assets/images/tiers/Diamond.png">
             </th>
         </tr>
         <tr>
@@ -119,7 +119,7 @@
             <td align="center" class="profilepic" colspan="2" rowspan="5">
                 <a target="_blank" href="https://www.facebook.com/100001156867316">
                     <!-- <img alt="profile" class="profile" src="http://graph.facebook.com/100001156867316/picture?width=151&height=151"> -->
-                    <img width="151" height="151" alt="profile" class="profile" src="/assets/images/profile/100001156867316.jpg">
+                    <img width="151" height="151" alt="profile" class="profile" src="/and-knuckles/assets/images/profile/100001156867316.jpg">
                 </a>
             </td>
             <tr>
@@ -136,9 +136,9 @@
         <tr>
             <!-- BADGES -->
             <td class="badges" id="b-williamd1k0" colspan="4">
-                <img class="badgeicon" src="/assets/images/badges/mythDiamond.png" alt="mythDiamond" />
-                <img class="badgeicon" src="/assets/images/badges/merito.png" alt="merito" />
-                <img class="badgeicon" src="/assets/images/badges/programeiro.png" alt="programeiro" />
+                <img class="badgeicon" src="/and-knuckles/assets/images/badges/mythDiamond.png" alt="mythDiamond" />
+                <img class="badgeicon" src="/and-knuckles/assets/images/badges/merito.png" alt="merito" />
+                <img class="badgeicon" src="/and-knuckles/assets/images/badges/programeiro.png" alt="programeiro" />
             </td>
         </tr>
         <tr>
@@ -155,7 +155,7 @@
         <tr>
             <!-- CREST ICON -->
             <th class="crest">
-                <img alt="crest" class="crestpic" title="" src="/assets/images/crests/hood.png">
+                <img alt="crest" class="crestpic" title="" src="/and-knuckles/assets/images/crests/hood.png">
             </th>
             <!-- NAME -->
             <th align="left" class="name" colspan="3"> Lucas Flicky </th>
@@ -165,7 +165,7 @@
                 <b>Nível</b>: Minister
             </th>
             <th align="right" class="tiericon">
-                    <img alt="tier" class="tier" title="Minister" src="/assets/images/tiers/Minister.png">
+                    <img alt="tier" class="tier" title="Minister" src="/and-knuckles/assets/images/tiers/Minister.png">
             </th>
         </tr>
         <tr>
@@ -173,7 +173,7 @@
             <td align="center" class="profilepic" colspan="2" rowspan="5">
                 <a target="_blank" href="https://www.facebook.com/1489576273">
                     <!-- <img alt="profile" class="profile" src="http://graph.facebook.com/1489576273/picture?width=151&height=151"> -->
-                    <img width="151" height="151" alt="profile" class="profile" src="/assets/images/profile/1489576273.jpg">
+                    <img width="151" height="151" alt="profile" class="profile" src="/and-knuckles/assets/images/profile/1489576273.jpg">
                 </a>
             </td>
             <tr>
@@ -190,9 +190,9 @@
         <tr>
             <!-- BADGES -->
             <td class="badges" id="b-lucasflicky" colspan="4">
-                <img class="badgeicon" src="/assets/images/badges/mythMinister.png" alt="mythMinister" />
-                <img class="badgeicon" src="/assets/images/badges/desenheiro.png" alt="desenheiro" />
-                <img class="badgeicon" src="/assets/images/badges/programeiro.png" alt="programeiro" />
+                <img class="badgeicon" src="/and-knuckles/assets/images/badges/mythMinister.png" alt="mythMinister" />
+                <img class="badgeicon" src="/and-knuckles/assets/images/badges/desenheiro.png" alt="desenheiro" />
+                <img class="badgeicon" src="/and-knuckles/assets/images/badges/programeiro.png" alt="programeiro" />
             </td>
         </tr>
         <tr>
@@ -209,7 +209,7 @@
         <tr>
             <!-- CREST ICON -->
             <th class="crest">
-                <img alt="crest" class="crestpic" title="" src="/assets/images/crests/vkps.png">
+                <img alt="crest" class="crestpic" title="" src="/and-knuckles/assets/images/crests/vkps.png">
             </th>
             <!-- NAME -->
             <th align="left" class="name" colspan="3"> Vinicius Kleinsorgen </th>
@@ -219,7 +219,7 @@
                 <b>Nível</b>: Unicorn
             </th>
             <th align="right" class="tiericon">
-                    <img alt="tier" class="tier" title="Unicorn" src="/assets/images/tiers/Unicorn.png">
+                    <img alt="tier" class="tier" title="Unicorn" src="/and-knuckles/assets/images/tiers/Unicorn.png">
             </th>
         </tr>
         <tr>
@@ -227,7 +227,7 @@
             <td align="center" class="profilepic" colspan="2" rowspan="5">
                 <a target="_blank" href="https://www.facebook.com/100002623130922">
                     <!-- <img alt="profile" class="profile" src="http://graph.facebook.com/100002623130922/picture?width=151&height=151"> -->
-                    <img width="151" height="151" alt="profile" class="profile" src="/assets/images/profile/100002623130922.jpg">
+                    <img width="151" height="151" alt="profile" class="profile" src="/and-knuckles/assets/images/profile/100002623130922.jpg">
                 </a>
             </td>
             <tr>
@@ -244,9 +244,9 @@
         <tr>
             <!-- BADGES -->
             <td class="badges" id="b-vinicius" colspan="4">
-                <img class="badgeicon" src="/assets/images/badges/mythUnicorn.png" alt="mythUnicorn" />
-                <img class="badgeicon" src="/assets/images/badges/3ds.png" alt="3ds" />
-                <img class="badgeicon" src="/assets/images/badges/music.png" alt="music" />
+                <img class="badgeicon" src="/and-knuckles/assets/images/badges/mythUnicorn.png" alt="mythUnicorn" />
+                <img class="badgeicon" src="/and-knuckles/assets/images/badges/3ds.png" alt="3ds" />
+                <img class="badgeicon" src="/and-knuckles/assets/images/badges/music.png" alt="music" />
             </td>
         </tr>
         <tr>
@@ -261,7 +261,7 @@
         <div id="badge-board" class="panel panel-default hide-board">
 
             <p>
-                <b>Nome:</b> Mythnister <img src="/assets/images/badges//mythMinister.png" alt="mythMinister" />
+                <b>Nome:</b> Mythnister <img src="/and-knuckles/assets/images/badges//mythMinister.png" alt="mythMinister" />
             </p>
             <p>
                 <b>Título:</b> Mythnister: Leading the path of strife!
@@ -274,7 +274,7 @@
             </p>
             <br>
             <p>
-                <b>Nome:</b> Programeiro <img src="/assets/images/badges//programeiro.png" alt="programeiro" />
+                <b>Nome:</b> Programeiro <img src="/and-knuckles/assets/images/badges//programeiro.png" alt="programeiro" />
             </p>
             <p>
                 <b>Título:</b> Programeiro: Ajuda a codar paradas mitadoras
