--- a/_view/template.html
+++ b/_view/template.html
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="{{ vars.path.top }}">
-                    <img src="{{ vars.path.top }}assets/images/logo.png" alt="logo" />
+                    <img class="logo-icon" src="{{ vars.path.top }}assets/images/logo.png" alt="logo" />
                     {{ camp.name }}
                 </a>
             </div>
