--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/and-knuckles/">
-                    <img src="/and-knuckles/assets/images/logo.png" alt="logo" />
+                    <img class="logo-icon" src="/and-knuckles/assets/images/logo.png" alt="logo" />
                     Projeto Teste
                 </a>
             </div>
